infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: event-bus 
  template:
    metadata:
      labels:
        app: event-bus
    spec: 
      containers:
      - name: event-bus
        image: pdhawan2001/event-bus
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector:
    app: event-bus
  ports: 
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
